Colaboratory kullanılarak oluşturuldu

--- a/visualization_dataset_in_plygdata.ipynb
+++ b/visualization_dataset_in_plygdata.ipynb
@@ -6,7 +6,7 @@
       "name": "visualization_dataset_in_plygdata.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyODyE7SyANSodrHPtI3pmCg",
+      "authorship_tag": "ABX9TyOs1yc1sjLEQnVH9dpv9Yq8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,7 +89,7 @@
         "id": "3dM-Diq_Y11B"
       },
       "source": [
-        ""
+        "There are 4 dataset in this study. These are XOR, Circle, Spiral, Gauss datasets"
       ]
     },
     {
